<resources>
    <string name="app_name">Paro</string>
    <string name="home">Home</string>
    <string name="ledger">Ledger</string>
    <string name="record">Record</string>
    <string name="data">Data</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="ImageViewparo">ImageViewparo</string>
    <string name="register">register</string>
    <string name="signin">SignIn</string>
    <string name="password">please enter your password</string>
    <string name="inputName">please enter your username</string>

    <string name="TODO">TODO</string>

    <string name="name">name:</string>
    <string name="id">ID:</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="select_the_caregivers">select the staffs</string>
    <string name="select_the_patients">select the staff</string>
    <string name="start">Start</string>
    <string name="textViewCaregivers">Caregivers</string>
    <string name="textViewdata">Data</string>
    <string name="patient01">patient01</string>
    <string name="patient02">patient02</string>
    <string name="patient03">patient03</string>
    <string name="patient04">patient04</string>
    <string name="patient05">patient05</string>
    <string name="resetButton">Reset</string>
    <string name="finish">Finish</string>
    <string name="textviewRecord">Record Tool</string>
    <string name="account_register">Account Register</string>
    <string name="WeeklyTherapyHours">Weekly Therapy Hours</string>
    <string name="condition03">move</string>
    <string name="condition04">leave</string>
    <string name="Start">Start</string>
    <string name="StartDateAndTime">Starting time:</string>
    <string name="nursingCareLevel">Nursing Care Level:</string>
    <string name="petBreedingExperience">Pet Breeding Experience:</string>
    <string name="WeeklyTherapyHours2">Weekly Therapy Hours:</string>
    <string name="SelfSupportedDegree">Self‐Supported Degree :</string>
    <string name="birthday">Birthday:</string>
    <string name="Age">age:</string>
    <string name="patientName">\tYamada Taro</string>
    <string name="warning01">Cannot delete this log!</string>
    <string name="date">Date</string>
    <string name="nursingLog">Nursing log</string>
    <string name="editStartDate">Please enter the date</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deleteAllData">Delete all data?</string>
    <string name="delete">Delete</string>
    <string name="editRecord">Edit</string>
    <string name="addRecordButtonTips">Please input</string>
    <string name="deleteRecordButton">Do you want to delete this button?</string>
    <string name="deleteRecord">Do you want to delete this log?</string>
    <string name="editTime">Time</string>
    <string name="editPatient">Patient</string>
    <string name="editBehavior">Behavior</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="problemBehavior01">Abuse</string>
    <string name="problemBehavior02">Hyperactivity</string>
    <string name="problemBehavior03">Wandering</string>
    <string name="problemBehavior04">Delusion</string>
    <string name="radioButtonSymptom">Symptom</string>
    <string name="radioButtonBehavior">Behavior</string>
    <string name="staffIntervene">Intervene</string>
    <string name="radioButtonEffect">Effect</string>
    <string name="allPatient">ALL</string>
    <string name="intervene01">Talking to the staff</string>
    <string name="intervene02">Pass the paro</string>
    <string name="intervene03">Urging the Patient to tuch the pa</string>
    <string name="intervene04">Take back the paro</string>
    <string name="editStartTime">Please enter the time</string>
    <string name="message">message</string>
    <string name="addPatientData">Please enter the data of patient</string>
    <string name="addStaffData">Please enter the data of staff</string>
    <string name="deletePatient">Do you want to delete this patient?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="log">Log Book</string>
    <string name="noData">no data</string>
    <string name="hello">Hello,</string>
    <string name="careGiverName">Taro Yamada</string>
    <string name="sann">" "</string>
    <string name="start_the_therapy">Start the therapy</string>
    <string name="history">History</string>
    <string name="deleteAllDataTittle">delete all data</string>
    <string name="resetRecordButton">reset record buttons</string>
    <string name="manual">manual</string>
    <string name="exportData">export data</string>
    <string name="none">none</string>
    <string name="signUp">Sigh up</string>
    <string name="patientCondition">condition</string>
    <string name="patientExpression">expression</string>
    <string name="patientGaze">gaze</string>
    <string name="patientTalk">talk</string>
    <string name="interaction">interaction</string>
    <string name="patientProblemBehavior">problem behavior</string>
    <string name="remark">remark</string>
    <string name="condition01">sitting alone</string>
    <string name="condition02">sitting with group</string>
    <string name="remark01">none</string>
    <string name="remark02">out</string>
    <string name="interaction01">受け渡し</string>
    <string name="paroContact02">なでる</string>
    <string name="paroContact03">抱く</string>
    <string name="talkTo01">paro</string>
    <string name="talkTo02">staff</string>
    <string name="talkTo03">other users</string>
    <string name="expression01">laugh</string>
    <string name="facialExpression02">smile</string>
    <string name="facialExpression03">no expression</string>
    <string name="facialExpression04">hate</string>
    <string name="problemBehavior05">none</string>
    <string name="startTime">startTime</string>
    <string name="finishTime">finishTime</string>
    <string name="time">time</string>
    <string name="staff">staff</string>
    <string name="item">item</string>
    <string name="note">note</string>
    <string name="todo">TODO</string>
    <string name="buttonLeft">later</string>
    <string name="buttonright">after</string>
    <string name="lineOfSight02">別の所</string>
    <string name="lineOfSight01">外</string>
    <string name="paroContact04">触れず</string>
    <string name="talkTo04">ほぼ無言</string>
    <string name="deleteStaff">Do you want to delete this staff?</string>
    <string name="patient">patient</string>
    <string name="buttonContinue">continue</string>
    <string name="buttonBack">back</string>
    <string name="WeeklyWorkHours">Weekly Work Hours</string>
    <string name="problemBehavior">Problem Behavior:</string>
    <string name="therapyTime">Therapy Time</string>
    <string name="addRecord">record</string>
    <string name="facialExpression05">cry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="before_hint">触れあい前の気分</string>
    <string name="after_hint">触れあい後の気分</string>
    <string name="is_delete">このデータを削除します？</string>
    <string name="sure_delete">よろしいですか？</string>
    <string name="yes_delete">キャンセル</string>
    <string name="no_delete">削除</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
