<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@color/button1"
    >



    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/account_register"
        android:textSize="24sp"
 />





    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/paro"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toStartOf="@+id/guideline92"
        app:layout_constraintStart_toStartOf="@+id/guideline81"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/translucent"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        android:textSize="12sp"
        />
    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/translucent"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="12sp"
 />

    <EditText
        android:id="@+id/editTextTextAge"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/translucent"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:hint="@string/age"
        android:inputType="textPassword"
        android:textSize="12sp"
 />

    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_female"
            android:layout_width="wrap_content"
            android:text="@string/female"
            android:checked="true"
            android:layout_height="wrap_content"></RadioButton>

        <RadioButton
            android:id="@+id/rb_male"
            android:layout_width="wrap_content"
            android:text="@string/male"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"></RadioButton>
    </RadioGroup>
    <Button
        android:id="@+id/button15"
        android:layout_width="132dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/signUp"
        android:textColor="@color/cardview_light_background"
 />

</LinearLayout>