<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg">


    <TextView
        android:id="@+id/textViewTittleInDialogPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/addPatientData"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTittleInDialogPatient" />

    <ImageView
        android:id="@+id/imageViewInDialogPatient"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ps" />

    <TextView
        android:id="@+id/textViewPatientIdInDialogPatient"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/id"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonPatientIdInDialogPatient"
        app:layout_constraintEnd_toEndOf="@+id/textViewPatientNameInDialogPatient" />

    <EditText
        android:id="@+id/editTextTextPersonPatientIdInDialogPatient"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintEnd_toStartOf="@+id/guideline29"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPatientIdInDialogPatient"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="LabelFor"
        tools:text="00000001" />

    <TextView
        android:id="@+id/textViewPatientNameInDialogPatient"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintStart_toEndOf="@+id/imageViewInDialogPatient"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientIdInDialogPatient" />

    <EditText
        android:id="@+id/editTextTextPersonPatientNameInDialogPatient"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:gravity="start|center_vertical"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintEnd_toStartOf="@+id/guideline29"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPatientNameInDialogPatient"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPatientIdInDialogPatient"
        tools:ignore="LabelFor"
        tools:text="山田　太郎" />

    <TextView
        android:id="@+id/textViewPatientAgeInDialogPatient"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/Age"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintStart_toEndOf="@+id/imageViewInDialogPatient"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientNameInDialogPatient" />

    <EditText
        android:id="@+id/editTextTextPersonPatientAgeInDialogPatient"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:inputType="number"
        android:maxEms="4"
        android:maxLength="4"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/gray"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintEnd_toStartOf="@+id/guideline29"
        app:layout_constraintStart_toEndOf="@+id/textViewPatientAgeInDialogPatient"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonPatientNameInDialogPatient"
        tools:ignore="LabelFor"
        tools:text="65" />

    <TextView
        android:id="@+id/textViewPatientSexInDialogPatient"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/sex"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/textSizeRegular"
        app:layout_constraintStart_toEndOf="@+id/imageViewInDialogPatient"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientAgeInDialogPatient" />

    <Spinner
        android:id="@+id/spinnerPatientSexInDialogPatient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:drawable/editbox_background"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPatientSexInDialogPatient"
        app:layout_constraintEnd_toStartOf="@+id/guideline29"
        app:layout_constraintStart_toEndOf="@+id/textViewPatientSexInDialogPatient"
        app:layout_constraintTop_toTopOf="@+id/textViewPatientSexInDialogPatient" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientSexInDialogPatient" />

    <View
        android:id="@+id/view4"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/buttonCancelInDialogPatient"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/button2"
        android:text="@string/cancel"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <Button
        android:id="@+id/buttonOkInDialogPatient"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view4"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>